// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverrideGradeConfirmModal snapshot: closed 1`] = `
<ConfirmModal
  cancelText="Go back"
  confirmText="Continue grade override"
  content="This cannot be undone.  The learner may have already received their grade."
  isOpen={false}
  onCancel={[MockFunction this.props.onCancel]}
  onConfirm={[MockFunction this.props.onConfirm]}
  title="Are you sure you want to override this grade?"
/>
`;

exports[`OverrideGradeConfirmModal snapshot: open 1`] = `
<ConfirmModal
  cancelText="Go back"
  confirmText="Continue grade override"
  content="This cannot be undone.  The learner may have already received their grade."
  isOpen={true}
  onCancel={[MockFunction this.props.onCancel]}
  onConfirm={[MockFunction this.props.onConfirm]}
  title="Are you sure you want to override this grade?"
/>
`;
